# ClinTrial

./: .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: easy_cases.json  hard_cases.json  medium_cases.json
server/: app.py
src/: App.tsx
tasks/: __init__.py  base.py  easy.py  hard.py  medium.py
tests/: test_validator_edges.py
